bin/testsuite/tests/compiler/src/errors/compiler1713.swg
#global testerror "Err0232"

alias point = string
func toto(x: point)
{
    var point = 0
    @print(point)
}
